# meetingagent0_opus4.1

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Meeting agent implementation,md  README.md  USAGE.md  copilot_implementation_guide.md  copilot_implementation_guide_part2.md  docker-compose.yml  meeting_agent_architecture (2).md  meeting_agent_reference.md  pyproject.toml
api/: __init__.py  main.py
api/routes/: bots.py  health.py
config/: __init__.py  settings.py
scripts/: setup.py
tests/: __init__.py  test_api.py
websocket/: __init__.py  handler.py
